themes/beautifulhugo/static/css/main.css
/* --- General --- */
html {
  min-height: 100%;
}

body {
  font-family: 'Lora', 'Times New Roman', serif;
  font-size: 18px;
  color: #112b3c;
  position: relative;
  background: #FFF;
  display: flex;
  flex-flow: column;
  min-height: 100vh;
}
.container[role=main] {
  margin-bottom:50px;
  border-radius: 25px;
  flex: 1 0 auto;
}

@media only screen and (max-width: 767px) {
.container[role=main] {
    margin-left: 0;
    margin-right: 0;
}
}

.well {
  border: 0;
  background-color: #FFF;
  box-shadow: none;
}

p {
  line-height: 1.5;
  margin: 6px 0;
}
p + p {
    margin: 24px 0 6px 0;
}
p a {
  /* text-decoration: underline */
  color: #008AFF;
}
h1,h2,h3,h4,h5,h6 {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 600;
}
a {
  color: #008AFF;
}
a:hover,
a:focus {
  color: #0085a1;
}
blockquote {
  color: #808080;
  font-style: italic;
}
blockquote p:first-child {
  margin-top: 0;
}
hr.small {
  max-width: 200px;
  margin: 15px auto;
  border-width: 4px;
  border-color: inherit;
  border-radius: 3px;
  color: #bd8201;
}

.main-content {
  padding-top: 80px;
}
@media only screen and (min-width: 768px) {
  .main-content {
    padding-top: 130px;
  }
}

.main-explain-area {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  padding: 15px inherit;
}

.hideme {
  display: none;
}

div.panel-body a.list-group-item {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 800;
  border-radius: 0;
  border: none;
  font-size: 16px;
}
div.panel-group .panel {
    border-radius: 0;
}
div.panel-group .panel+.panel {
    margin-top: 0;
}

div.panel-body a.list-group-item.view-all {
  font-weight: 600;
}

::-moz-selection {
  color: white;
  text-shadow: none;
  background: #0085a1;
}
::selection {
  color: white;
  text-shadow: none;
  background: #0085a1;
}
img::selection {
  color: white;
  background: transparent;
}
img::-moz-selection {
  color: white;
  background: transparent;
}

img {
  display: block;
  margin: auto;
  border: 3px solid #d3ce64;
  max-width: 480px;
  height: auto;
}

.img-title {
  max-width: 480px;
  height: 300px;
  width: 480px;
}

@media only screen and (max-width: 768px) {
.img-title { width: 300px; max-width: 400px; height: auto;}
}

@media only screen and (max-width: 768px) {
  [class*="responsive"] {
    width: 100%;
    height: auto;
  }
}

.disqus-comments {
  margin-top: 30px;
}

@media only screen and (min-width: 768px) {
  .disqus-comments {
    margin-top: 40px;
  }
}

/* --- Navbar --- */

.navbar-custom {
  background: #112b3c;
  border-bottom: 5px solid #717874;
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.navbar-custom .nav li a {
  text-transform: uppercase;
  font-size: 12px;
  letter-spacing: 1px;
}

.navbar-custom .navbar-brand,
.navbar-custom .nav li a {
  font-weight: 800;
  color: #bd8201;
}

.navbar-custom .navbar-brand:hover,
.navbar-custom .navbar-brand:focus ,
.navbar-custom .nav li a:hover,
.navbar-custom .nav li a:focus {
  color: #FFF;
}

.navbar-custom .navbar-brand-logo {
  padding-top: 0;
  -webkit-transition: padding .5s ease-in-out;
  -moz-transition: padding .5s ease-in-out;
  transition: padding .5s ease-in-out;
}
.navbar-custom .navbar-brand-logo img {
  -webkit-transition: height .5s ease-in-out;
  -moz-transition: height .5s ease-in-out;
  transition: height .5s ease-in-out;
}
.navbar-custom.top-nav-short .navbar-brand-logo {
  padding-top: 5px;
}
.navbar-custom.top-nav-short .navbar-brand-logo img {
  height: 40px;
}

@media only screen and (min-width: 768px) {
  .navbar-custom {
    padding: 20px 0;
    -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
    -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
    transition: background .5s ease-in-out,padding .5s ease-in-out;
  }

  .navbar-custom.top-nav-short {
    padding: 0;
  }
}

.navbar-custom .avatar-container {
  opacity: 1;
  visibility: visible;
  position: absolute;
  -webkit-transition: visibility 0.5s, opacity 0.5s ease-in-out;
  -moz-transition: visibility 0.5s, opacity 0.5s ease-in-out;
  transition: visibility 0.5s, opacity 0.5s ease-in-out;
  left: 50%;
  width: 100px;
  margin-top: -25px;
}

.navbar-custom .avatar-container  .avatar-img-border {
  width: 100%;
  border-radius: 50%;
  margin-left: -50%;
  margin-right: -50%;
  display: inline;
  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
}

.navbar-custom .avatar-container  .avatar-img {
  width: 100%;
  border-radius: 50%;
  display: inline;
  margin-left: auto;
  margin-right: auto;
  margin-top: -5px;
}

.navbar-custom.top-nav-short .avatar-container{
  opacity: 0;
  visibility: hidden;
}

.navbar-custom.top-nav-expanded .avatar-container  {
  display: none;
}

@media only screen and (min-width: 768px) {
  .navbar-custom .avatar-container {
    width: 100px;
    margin-top: -50px;
  }

  .navbar-custom .avatar-container  .avatar-img-border {
    width: 100%;
    box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
    -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
    -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
  }

  .navbar-custom .avatar-container  .avatar-img {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    display: block;
  }
}

/* Multi-level navigation links */
.navbar-custom .nav .navlinks-container {
  position: relative;
}
.navbar-custom .nav .navlinks-parent:after {
  content: " \25BC";
}
.navbar-custom .nav .navlinks-children {
  width: 100%;
  display: none;
  word-break: break-word;
}
.navbar-custom .nav .navlinks-container .navlinks-children a {
  display: block;
  padding: 10px;
  padding-left: 30px;
  background: #eee;
  text-decoration: none !important;
  border-width: 0 1px 1px 1px;
  font-weight: normal;
}
/* ... */

